fix: color of strong on dark mode

--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -9,7 +9,8 @@
       @apply font-bold no-underline hover:text-gray-500 dark:text-neutral-300;
     }
   }
-  p {
+  p,
+  strong {
     @apply dark:text-neutral-300;
   }
 
